--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-argbind>=0.3.7
-descript-audiotools>=0.7.2
+argbind
+descript-audiotools
 einops
 numpy
 torch
 torchaudio
 tqdm
 tensorboard
-numba>=0.5.7
+numba
 jupyterlab
 wandb
+matplotlib
+pystoi
+pesq
+pyyaml
+scipy
+julius
+transformers
